# openclaw-auto-dev

./: .gitignore  112_stage  AGENTS.md  ARCHITECT-102.md  ARCHITECT-152.md  ARCHITECT-97.md  ARCHITECT-99.md  ARCHITECT.md  ARCHITECTURE.md  CMakeLists.txt  CONFIG.md  DESIGN.md  DEV-RETROSPECTIVE.md  DEVELOPER-102.md  HEARTBEAT-MECHANISM.md  HEARTBEAT.md  HELLO_README.md  ISSUE-CHECKER.md  MULTI_AGENT_DESIGN.md  Makefile  OPENCLAW.md  PLAN.md  POST-MORTEM-9.md  POST-MORTEM.md  README.md  SOLUTION-12.md  SOLUTION-4.md  SPEC-issue-102.md  SPEC-issue-154.md  SPEC-issue-73.md  SPEC-issue-cleanup.md  SPEC.md  TESTING.md  TEST_REPORT.md  TEST_REPORT_102.md  TEST_REPORT_104.md  arch_plan.md  config.json  cron-report.md  date_utils_test  (+12 more)
.github/workflows/: check-issues.yml  ci.yml  cmake-tests.yml  issue-check.yml  pr-merge.yml
.pipeline/: ARCHITECT-102.md
.pipeline-state/: .notify_cache  0_stage.json  102_stage  104_stage  154_architect_output.md  1_stage.json  73_architect_output.md  73_stage  87_stage  97_architect_plan.md  97_implementation_plan.md  97_stage  99_stage  README.md  TEST_REPORT.md  TEST_REPORT_102.md  TEST_REPORT_104.md  TEST_REPORT_97.md  TEST_REPORT_99.md  _next_stage  architect_output.md  architect_plan.md  architect_stage  architect_stage.json  architect_stage0.state  current_stage  current_stage.json  developer_output.md  developer_output_102.md  developer_output_104.md  developer_output_97.md  developer_output_99.md  developer_stage  developer_stage.json  developer_stage1.state  label state.json  pipeline_stage.json  pipeline_state.json  review_summary.md  reviewer_output_104.md  (+20 more)
PRDs/: issue-97.md
agents/: README.deprecated.md  README.md
agents/architect/: task.txt
agents/deprecated/: architect_task.txt
agents/developer/: task.txt
agents/reviewer/: task.txt
agents/tester/: TESTER_STAGE2_RESULT.md  task.txt
docs/: BRANCH_STRATEGY.md  PIPELINE-ARCHITECTURE-81.md  issue-97-plan.md  setup.md
issues/: 152_architect_plan.md
issues/152/: PLAN.md
issues/90/: SPEC.md
openclaw/102_pipeline_final/: SPEC.md  TEST_REPORT.md
openclaw/102_test: pipeline方案b最终验证/: SPEC.md  TEST_REPORT.md
openclaw/102_test_pipeline_b_/: SPEC.md  TEST_REPORT.md
openclaw/104_pipeline_full_auto/: SPEC.md  TEST_REPORT.md
openclaw/104_test: pipeline全流程自动触发验证/: TEST_REPORT.md
openclaw/112_architect/: SPEC.md  TEST_REPORT.md
openclaw/152_feat: 测试覆盖率提升与代码质量改进/: SPEC.md  TEST_REPORT.md
openclaw/152_test_coverage_quality/: SPEC.md
openclaw/64_binary-tree/: TEST_REPORT.md
openclaw/71_list_reverse/: SPEC.md  TEST_REPORT.md
openclaw/73_min_stack/: SPEC.md  TEST_REPORT.md  architect_output.md
openclaw/75_level_order/: SPEC.md  TEST_REPORT.md
openclaw/77_test_algorithms/: TEST_REPORT.md
openclaw/79_test_validate_pipeline/: SPEC.md  TEST_REPORT.md
openclaw/83_test_pipeline/: SPEC.md  TEST_REPORT.md
openclaw/85_test_pipeline_skill/: SPEC.md  TEST_REPORT.md
openclaw/87_test: pipeline-runner.sh 状态驱动验证/: SPEC.md  TEST_REPORT.md
openclaw/87_test_pipeline_runner_sh_/: SPEC.md  TEST_REPORT.md
openclaw/90_feat_c_/: SPEC.md  TEST_REPORT.md
openclaw/93_test_pipeline/: SPEC.md  TEST_REPORT.md
openclaw/95_spawn_test/: SPEC.md  TEST_REPORT.md
openclaw/97_pipeline_test/: SPEC.md  TEST_REPORT.md
openclaw/97_test: 方案b自动pipeline验证/: SPEC.md  TEST_REPORT.md
openclaw/97_test_b_pipeline_/: SPEC.md  TEST_REPORT.md
openclaw/99_pipeline_fix/: SPEC.md  TEST_REPORT.md
openclaw/99_test-方案b修复后验证/: TEST_REPORT.md
scripts/: check-conflicts.sh  check-openclaw-issues.sh  cleanup-branches.sh  cleanup-issue-status.sh  cleanup-merged-branches.sh  close-stale-prs.sh  cron-check.sh  cron-heartbeat.sh  heartbeat-check.sh  multi-agent-run.sh  notify-feishu.sh  pipeline-runner.sh  process-issue.sh  scan-issues.sh  update-status.sh  validate-changes.sh
src/: CMakeLists.txt  algorithm_test.cpp  bash_test.cpp  binary_tree  binary_tree.cpp  date_utils.cpp  date_utils.h  date_utils_test.cpp  feat: 测试覆盖率提升与代码质量改进.cpp  feat_c_.cpp  file_finder.cpp  file_finder_lib.cpp  file_finder_lib.h  file_finder_test.cpp  final_test.cpp  hello.cpp  ini_parser.cpp  ini_parser.h  ini_parser_test.cpp  level_order.cpp  list_reverse.cpp  logger.cpp  logger.h  logger_test.cpp  main.py  matrix.cpp  matrix.h  matrix_test  matrix_test.cpp  min_stack.cpp  min_stack_test.cpp  ok_test.cpp  pipeline_102_test.cpp  pipeline_104_test.cpp  pipeline_83_test.cpp  pipeline_87_test.cpp  pipeline_97_test.cpp  pipeline_99_test.cpp  pipeline_notifier.cpp  pipeline_notifier.h  (+23 more)
src/build_new/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/: CMakeLists.txt  cleanup_validation_test.cpp  hello_test.cpp  pipeline-runner-test.sh  test_main.py
